day two part one done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,5 +19,6 @@ if(CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
         set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
 endif()
 
-add_executable(DayOneQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayOneQ1.cpp)
-add_executable(DayOneQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayOneQ2.cpp)
+add_executable(DayOneQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayOne/DayOneQ1.cpp)
+add_executable(DayOneQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayOne/DayOneQ2.cpp)
+add_executable(DayTwoQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayTwo/DayTwoQ1.cpp)
