--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,4 @@ endif()
 add_executable(DayOneQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayOne/DayOneQ1.cpp)
 add_executable(DayOneQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayOne/DayOneQ2.cpp)
 add_executable(DayTwoQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayTwo/DayTwoQ1.cpp)
+add_executable(DayTwoQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayTwo/DayTwoQ2.cpp)
