day three part one done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,5 @@ add_executable(DayOneQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayOne/DayOneQ1.cpp)
 add_executable(DayOneQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayOne/DayOneQ2.cpp)
 add_executable(DayTwoQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayTwo/DayTwoQ1.cpp)
 add_executable(DayTwoQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayTwo/DayTwoQ2.cpp)
+add_executable(DayThreeQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayThree/DayThreeQ1.cpp)
+add_executable(DayThreeQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayThree/DayThreeQ2.cpp)
