day four part 1 done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,5 @@ add_executable(DayTwoQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayTwo/DayTwoQ1.cpp)
 add_executable(DayTwoQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayTwo/DayTwoQ2.cpp)
 add_executable(DayThreeQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayThree/DayThreeQ1.cpp)
 add_executable(DayThreeQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayThree/DayThreeQ2.cpp)
+add_executable(DayFourQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayFour/DayFourQ1.cpp)
+add_executable(DayFourQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayFour/DayFourQ2.cpp)
