--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,5 @@ add_executable(DayFourQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayFour/DayFourQ1.cpp)
 add_executable(DayFourQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayFour/DayFourQ2.cpp)
 add_executable(DayFiveQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayFive/DayFiveQ1.cpp)
 add_executable(DayFiveQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DayFive/DayFiveQ2.cpp)
+add_executable(DaySixQ1 ${CMAKE_CURRENT_SOURCE_DIR}/src/DaySix/DaySixQ1.cpp)
+add_executable(DaySixQ2 ${CMAKE_CURRENT_SOURCE_DIR}/src/DaySix/DaySixQ2.cpp)
